  to ill-typed columns
  (Thomas Refis, with help from Gabriel Scherer and Luc Maranget)

- MPR#7704, GPR#1564: use proper variant tag in non-exhaustiveness warning
  (Jacques Garrigue, report by Thomas Refis)

- MPR#7712, GPR#1576: assertion failure with type abbreviations
  (Thomas Refis, report by Michael O'Connor, review by Jacques Garrigue)

- GPR#1530, GPR#1574: testsuite, fix 'make parallel' and 'make one DIR=...'
  to work on ocamltest-based tests.
  (Runhang Li and Sébastien Hinderer, review by Gabriel Scherer)

- GPR#1622: fix bug in the expansion of command-line arguments under Windows
  which could result in some elements of Sys.argv being truncated in some cases.
  (Nicolás Ojeda Bär, review by Sébastien Hinderer)

4.06 maintenance branch
-----------------------

### Bug fixes

- MPR#7661, GPR#1459: fix faulty compilation of patterns
  using extensible variants constructors
  (Luc Maranget, review by Thomas Refis and Gabriel Scherer, report
  by Abdelraouf Ouadjaout and Thibault Suzanne)

- MPR#7702, GPR#1553: refresh raise counts when inlining a function
  (Vincent Laviron, Xavier Clerc, report by Cheng Sun)

- MPR#7704, GPR#1559: Soundness issue with private rows and pattern-matching
  (Jacques Garrigue, report by Jeremy Yallop, review by Thomas Refis)

- MPR#7705, GPR#1558: add missing bounds check in Bigarray.Genarray.nth_dim.
  (Nicolás Ojeda Bär, report by Jeremy Yallop, review by Gabriel Scherer)

- MPR#7713, GPR#1587: Make pattern matching warnings more robust
  to ill-typed columns; this is a backport of GPR#1550 from 4.07+dev
  (Thomas Refis, review by Gabriel Scherer, report by Andreas Hauptmann)

- GPR#1470: Don't commute negation with float comparison
  (Leo White, review by Xavier Leroy)

- GPR#1538: Make pattern matching compilation more robust to ill-typed columns
  (Gabriel Scherer and Thomas Refis, review by Luc Maranget)

OCaml 4.06.0 (3 Nov 2017):
--------------------------
